# SVM_iris

./: .gitignore  README.md  pyproject.toml  svm_iris.py
report/: feature_subset_log.txt  report.md  run_log.txt
src/iris_svm/: __init__.py  __main__.py  data.py  train.py
